--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gensim2"]
-	path = gensim
-	url = https://github.com/rutum/gensim
+	path = gensim2
+	url = https://github.com/rutum/gensim/tree/rm_online
