--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "gensim"]
-	path = gensim
-	url = https://github.com/rutum/gensim/tree/rm_online
 [submodule "gensim_rm_online"]
 	path = gensim_rm_online
 	url = https://github.com/rutum/gensim.git
+	branch  = rm_online
